README includes new texts as well as index.rst. This include a comment about memote and cross-referencing FIX: style.css includes a new section to force text-align to left for tables UPDATED: New starting text in __init__.py, additionally old function translate is not in the core API but add_crossreferences

--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -2,3 +2,7 @@ div.document {
     text-align: justify;
 }
 
+div.rendered_html td{
+    text-align: left !important;
+}
+
